--- a/app/app.css
+++ b/app/app.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  @apply bg-blue-600 dark:bg-gray-950 m-8 flex justify-center;
+  @apply bg-purple-800 dark:bg-gray-950 m-8;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
